Fixed wsl issues, and new README

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,6 @@
 set -g base-index 1
 set -g pane-base-index 1
 
-
 # Terminal and color support
 set -g default-terminal "tmux-256color"
 set -as terminal-overrides ',xterm-256color:RGB'
@@ -18,6 +17,6 @@ set -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send -X copy-selection-and-cancel
 
-# Allow Shift + mouse drag to bypass tmux and copy with Alacritty
+# Allow Shift + mouse drag to bypass tmux (works in Alacritty, ignored elsewhere)
 set -g allow-passthrough on
 
